--- a/test.ipynb
+++ b/test.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "d865RY5uHWNZ"
       },
@@ -30,6 +30,34 @@
         "from scipy.stats import multivariate_normal\n",
         "import os\n",
         "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\"\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor([0.1000, 0.2000, 0.4000, 0.5000])\n",
+            "tensor([2, 0, 3, 1])\n",
+            "tensor([1, 3, 0, 2])\n",
+            "8\n",
+            "120\n"
+          ]
+        }
+      ],
+      "source": [
+        "prob = torch.tensor([0.2, 0.5, 0.1, 0.4])\n",
+        "sorted_prob, sorted_indices = torch.sort(prob)\n",
+        "print(sorted_prob)\n",
+        "print(sorted_indices)\n",
+        "rank = torch.argsort(sorted_indices)\n",
+        "print(rank)\n",
+        "print(128//15)\n",
+        "print(15*8)"
       ]
     },
     {
